Archive2/b3/85f40100d02c2a/output
main.cpp:20:16: error: field 'cenemy1' has incomplete type 'CEnemy'
         CEnemy cenemy1;                  //error: "field 'cenemy1' has incomplete type"
                ^
